Improve locker by using keep-alive thread