@@ -545,7 +545,7 @@ print(e.z)
 e = d >> Random() >> let(fun, a=5)
 print("e =", e.z)
 """
-e = 7000025.0
+e = 70025.0
 """
 ```
 
@@ -555,7 +555,7 @@ e = 7000025.0
 e = e >> Random() >> let(fun, a=5)
 print("e =", e.z)
 """
-e = 725.0
+e = 7025.0
 """
 ```
 
